--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
              <td><a href="https://usabilityhub.com/tests/1ae31a84a266/results/6fb2d8560881">B3 test results </a></td>
           </tr>
           <tr class="odd">
-             <td><a href="#">Test B4 here</a></td>
-             <td><a href="">B4 test results </a></td>
+             <td><a href="https://usabilityhub.com/do/c78cb69a6601/3c3">Test B4 here</a></td>
+             <td><a href="https://usabilityhub.com/tests/c78cb69a6601/results/82e67bca0f2e">B4 test results </a></td>
           </tr>
           <tr>
              <td><a href="#">Test B5 here</a></td>
