--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
   <section class="main">
     <h2 class="desc-title">Project Descriptions</h2>
     <!-- Replace this text with your description of the project -->
-    <p class="description">For the B2 assignment I created a simple 4 page wire frame mostly consisting of input fields and submit buttons. It contains name, email, country, address, phone number, age, gender, username, and password fields. It also contains specific Design patterns which was separately annotated. I also created an icon for World Surf. Page 2 is the error page.</p>
+    <p class="description">For the B2 assignment I created a simple 4 page wire frame mostly consisting of input fields and submit buttons. It contains name, email, country, address, phone number, age, gender, username, and password fields. It also contains specific Design patterns which was separately annotated. I also created an icon for World Surf. Page 2 is the error page. B3 consists of a details page that contains Destination Information, Destination Cam and Tips & Tricks expanded pages. Each page expands to show information within each page. Page 4 is the bookmark page to bookmark-preferred locations.
+B4 consists of the home page with the breakdown of World Surf and a Home page for users to login or sign up.
+
+</p>
     <figure>
     <!--   add your image to the img folder 
       Replace the "img.jpg" with the name of your image  -->
