--- a/index.html
+++ b/index.html
@@ -84,14 +84,9 @@ B4 consists of the home page with the breakdown of World Surf and a Home page fo
              <td><a href="https://usabilityhub.com/tests/4abe1f771d0e/results/db1da4636408">B5 test results </a></td>
           </tr>
           <tr class="odd">
-             <td><a href="#">Test B6 here</a></td>
-             <td><a href="#">B6 test results </a></td>
-          </tr>
-          <!-- start link -->
-          <tr>
-             <td><a href="#">Test B7 here</a></td>
-             <td><a href="#">B7 test results </a></td>
-          </tr>
+             <td><a href="https://usabilityhub.com/do/7b1ca0691c9a/f7cb">Test B6 here</a></td>
+             <td><a href="https://usabilityhub.com/tests/7b1ca0691c9a/results/68e9b68256d1">B6 test results </a></td>
+       
           <!-- end link -->
           <!-- to add a new link copy from start link to end link and paste here-->
        </tbody>
